<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingFragment">

    <data>
        <variable
            name="settingFragment"
            type="com.example.myapplication.ui.SettingFragment" />
        <variable
            name="mainActivity"
            type="com.example.myapplication.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_title"
            android:text="@string/setting_title"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_text"
            android:text="@string/setting_text"
            app:layout_constraintTop_toBottomOf="@id/setting_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


<!--        BGMの設定-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_sound"
            android:text="@string/setting_sound"
            app:layout_constraintTop_toBottomOf="@id/setting_text"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sound_switch"
            android:text="@string/sound_switch"
            android:checked="true"
            android:background="@drawable/frame_style"
            android:onClick="@{() -> settingFragment.switchBgm()}"
            app:layout_constraintTop_toBottomOf="@id/setting_sound"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


<!--        音声読み上げの設定-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_guide"
            android:text="@string/setting_guide"
            app:layout_constraintTop_toBottomOf="@id/sound_switch"
            app:layout_constraintStart_toStartOf="parent" />

<!--        観光スポット-->
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tourist_sight_switch"
            android:text="@string/tourist_sight_switch"
            android:background="@drawable/frame_style"
            app:layout_constraintTop_toBottomOf="@id/setting_guide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        飲食店-->
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_switch"
            android:text="@string/restaurant_switch"
            android:background="@drawable/frame_style"
            app:layout_constraintTop_toBottomOf="@id/tourist_sight_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        歴史-->
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/history_switch"
            android:text="@string/history_switch"
            android:background="@drawable/frame_style"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/restaurant_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

<!--        雑学-->
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/trivia_switch"
            android:text="@string/trivia_switch"
            android:background="@drawable/frame_style"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/history_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:id="@+id/start_button"
            android:background="#00000000"
            android:onClick="@{() -> settingFragment.pushButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>