<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/item_image"
        android:contentDescription="@string/item_image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favorite_button"
        android:contentDescription="@string/favorite_button_description"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="@id/item_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_describe"
        app:layout_constraintTop_toBottomOf="@id/item_title"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintBottom_toTopOf="@id/item_page" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/item_page"
        android:text="@string/item_page"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintEnd_toStartOf="@id/item_map"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_map"
        android:text="@string/item_map"
        app:layout_constraintStart_toEndOf="@id/item_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/item_page" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/underline"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>